<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background">

    <ImageView
        android:id="@+id/ivCityFragmentPic"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"/>

    <TextView
        android:id="@+id/tvCityFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interesting_fact"
        android:textSize="22sp"
        android:textColor="@color/textPrimaryColor"
        android:layout_below="@+id/ivCityFragmentPic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvCityFragmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_text"
        android:textColor="@color/textPrimaryColor"
        android:textSize="20sp"
        android:layout_below="@+id/tvCityFragmentTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tvCityFragmentLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/read_more"
        android:layout_below="@+id/tvCityFragmentText"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>